--- a/pets.css
+++ b/pets.css
@@ -19,6 +19,10 @@
     font-family: "Roboto";
     src: url(/assets/fonts/Roboto-Regular.ttf);
 }
+@font-face {
+    font-family: "Roboto Thin";
+    src: url(/assets/fonts/Roboto-Thin.ttf);
+}
 
 body {
     margin: 0 auto;
@@ -410,4 +414,12 @@ h2 {
 
 .mr-12px {
     margin-right: 12px;
+}
+
+.designed-by-text {
+    font-family: "Roboto Thin", serif;
+    font-style: normal;
+    font-weight: 100;
+    font-size: 16px;
+    line-height: 130%;
 }
