--- a/pets.css
+++ b/pets.css
@@ -423,3 +423,16 @@ h2 {
     font-size: 16px;
     line-height: 130%;
 }
+
+@media screen and (max-width: 1000px) {
+    
+}
+
+@media screen and (max-width: 640px) {
+    
+}
+
+@media screen and (max-width: 320px) {
+    
+}
+
