--- a/pets.css
+++ b/pets.css
@@ -25,9 +25,7 @@
 }
 
 body {
-    margin: 0 auto;
-    width: 1600px;
-    position: relative;
+    width: 100%;
 }
 
 input {
@@ -67,8 +65,14 @@ h2 {
 }
 
 .outer-container {
-    width: 1600px;
+    max-width: 1600px;
+    width: 100%;
     margin: 0 auto;
+}
+
+.container {
+    max-width: 1160px;
+    width: 100%;
 }
 
 .logo {
@@ -88,9 +92,7 @@ h2 {
     vertical-align: center;
 }
 
-.container {
-    width: 1160px;
-}
+
 
 .nav {
     font-family: "Roboto", serif;
@@ -159,7 +161,7 @@ h2 {
 }
 
 .animal-online-height {
-    height: var(--animal-online-height);
+    min-height: var(--animal-online-height);
 }
 
 .panda-text {
@@ -262,7 +264,7 @@ h2 {
     width: 200px;
     height: 605px;
     right: 0;
-    top: 792px;
+    top: -103px;
     background: url(/assets/img/flower_foto1.png);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
@@ -425,7 +427,9 @@ h2 {
 }
 
 @media screen and (max-width: 1000px) {
-    
+    .pc-only {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 640px) {
